dispatcher: fix wrong IP6 addresses in dispatcher script environment

https://bugzilla.gnome.org/show_bug.cgi?id=701819

Signed-off-by: Thomas Haller <thaller@redhat.com>